--- a/RentWheelsApp.csproj
+++ b/RentWheelsApp.csproj
@@ -6,16 +6,15 @@
         <!-- Uncomment to also build the tizen app. You will need to install tizen by following this: https://github.com/Samsung/Tizen.NET -->
         <!-- <TargetFrameworks>$(TargetFrameworks);net6.0-tizen</TargetFrameworks> -->
         <OutputType>Exe</OutputType>
-        <RootNamespace>Rent_Wheels_App_Template</RootNamespace>
         <UseMaui>true</UseMaui>
         <SingleProject>true</SingleProject>
         <ImplicitUsings>enable</ImplicitUsings>
 
         <!-- Display name -->
-        <ApplicationTitle>Rent Wheels App Template</ApplicationTitle>
+        <ApplicationTitle>Rent Wheels</ApplicationTitle>
 
         <!-- App Identifier -->
-        <ApplicationId>com.companyname.rent_wheels_app_template</ApplicationId>
+        <ApplicationId>com.companyname.RentWheelsApp</ApplicationId>
         <ApplicationIdGuid>6a60e5e7-1792-433b-aa6f-cdd5257909f2</ApplicationIdGuid>
 
         <!-- Versions -->
@@ -39,7 +38,8 @@
 
         <!-- Images -->
         <MauiImage Include="Resources\Images\*"/>
-        <MauiImage Update="Resources\Images\dotnet_bot.svg" BaseSize="168,208"/>
+        <MauiImage Update="Resources\Images\cars.svg" BaseSize="24,24"/>
+        <MauiImage Update="Resources\Images\rentals.svg" BaseSize="24,24"/>
 
         <!-- Custom Fonts -->
         <MauiFont Include="Resources\Fonts\*"/>
